fixed about text alignment

--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ p{
 
 #aboutDiv{
 	position: absolute;
-	top: 150px;
+	top: 200px;
 	left: 450px;
 	width: 650px;
 }
